2000-05-12  Steve Langasek <vorlon@dodds.net>

	* configure.in, meta-server/gnocatan-meta-server.c:
	Included autoconf fix for cross-platform getopt support

2000-05-12  Bibek Sahu <scorpio@dodds.net>

	* Moved the common gui stuff into a separate library, so a non-gui 
	program won't depend on the gui functions.

2000-05-12  Dave Cole <dave@dccs.com.au>

	* client/client.c, common/state.c, common/state.h,
	server/develop.c, server/discard.c, server/player.c,
	server/pregame.c, server/robber.c, server/trade.c, server/turn.c:
	Removed all of the sm_resp_{ok,err,handler}() API from the state
	machine.  Simplified each entry on the state stack down to a
	single StateFunc.  Modified client state machine to use simplified
	state machine API.

	* client/client.c, client/trade.c, client/turn.c: Fixed (untested)
	bug where could not trade after playing road building card before
	rolling dice.  Altered is_maritime_trade_allowed() to look at the
	strict_trade flag.

2000-05-12  Bibek Sahu <scorpio@dodds.net>

	* Completely rewrote logging setup.  It's now very modular in
	design, and the main logging stuff does not depend on gtk/gnome
	(which is the reason it was done).  Most files that did logging were
	moderately modified -- the following functions were converted:
		log_error(...) -> log_message( MSG_ERROR, ... )
		log_info(...) -> log_message( MSG_INFO, ... )
		log_color(...) -> log_message( MSG_CHAT, ... )
	
	* The client's initialization sequence now logs to the console until
	all the windows are set up, then switches logging to the message
	window.  This is step 1 on the road to a server that doesn't require
	a gui...

2000-05-11  Dave Cole <dave@dccs.com.au>

	* client/client.c, common/state.[ch]: Removed all of the resphook
	from the state machine API code and replaced it with some wrappers
	to sm_resp_{ok,err,handler}() in client.c.  First stage in
	reducing the client state machine complexity.  Moved a lot of code